# ai-clean-chat

./: .editorconfig  .gitmodules  Makefile  README.md  ai-clean-chat.code-workspace  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
ai/: .gitignore  README.md  class_model.py  const.py  pyproject.toml  requirements.txt  train.py
backend/: .air.toml  .dockerignore  .gitignore  .golangci.yml  Dockerfile  README.md  download-model.sh  go.mod  go.sum  main.go  main.py  pyproject.toml  run.sh
backend/bert/: .dockerignore  .gitignore  Dockerfile  app.py  class_model.py  const.py  main.py  profanity_scores.csv  pyproject.toml
backend/bert/tests/: test_data.json  test_main.py
backend/server/: server.go  signaling.go  struct.go
backend/webrtcServer/: .gitignore  audioStreaming.go  const.go  profanity.go  profanity_test.go  sherpa.go  struct.go  utils.go  webrtcServer.go  wsMessages.go
design/: README.md
frontend/: +page.svelte  .env.example  .prettierrc  Dockerfile  Dockerfile.dev  bun.lockb  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: index.ts
frontend/src/lib/components/: ButtonOption.svelte  CameraSelector.svelte  Emojis.svelte  HangUp.svelte  Header.svelte  Image.svelte  InfoPanel.svelte  MeetingID.svelte  MicrophoneSelector.svelte  (+4 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/types/: webRTC.interface.ts
nginx/: nginx.conf
traefik/: traefik.yml
traefik/certs/: .gitignore  home.site+1-key.pem  home.site+1.pem
traefik/dynamic/: config.yml
(+9 files in other folders)
